tests/snapshots/wallets/change_active_address/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - change-active-address
    - foo
    - 15EvQxuTu5qdgEfPY9555FKv6Ev4cRLxwEJfbm4pcoEm9
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: foo not found
